--- a/src/scss/blocks/_popup.scss
+++ b/src/scss/blocks/_popup.scss
@@ -22,14 +22,19 @@
   &__container {
     position: absolute;
     bottom: 45px;
-    left: 50%;
-    transform: translateX(-50%);
+    right: 0;
     height: 0;
     min-height: 0;
     overflow: hidden;
     display: flex;
     border-radius: 5px;
     transition: all .4s;
+
+    @media (min-width: 900px) {
+      left: 50%;
+      right: auto;
+      transform: translateX(-50%);
+    }
   }
 
   &--opened &__container {
